--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+gitupdate
 # This file specifies intentionally untracked files that all Moodle git
 # repositories should ignore. It is recommended not to modify this file in your
 # local clone. Instead, use .git/info/exclude and add new records there as
